# turbo-pi-dog-tracker

./: .clang-format  .gitignore  CMakeLists.txt  README.md  flake.nix  nix_env_setup.sh
include/: cli.hpp  stream_inference.hpp  telemetry.hpp  tracker.hpp  video.hpp
robot_bridge/: turbo_pi_bridge.py
src/: cli.cpp  main.cpp  stream_inference.cpp  telemetry.cpp  tracker.cpp  video.cpp
